# acpbridge

./: Cargo.toml  README.md  config.example.yaml  test_lark.py
src/: acp_client.rs  agent_session.rs  config.rs  egress.rs  ingress.rs  lib.rs  main.rs  message.rs  orchestrator.rs
src/channel/: lark.rs  mod.rs  qq.rs  telegram.rs  wechat.rs
tests/: acp_client_test.rs
